--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.82.1",
     "react-native-alert-notification": "^0.4.2",
     "react-native-animatable": "^1.4.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
